# ihust

./: .buildinfo  .gitignore  README.md  apt.txt  environment.yml  genindex.html  index.html  jupyter_server_config.py  markdown.html  no environment.yml  objects.inv  postBuild  pyproject.toml  references.html  requirements.txt  search.html  searchindex.js  setup.py
.streamlit/: config.toml
_sources/: index.md  markdown.md  references.md
_sources/miniappz/: blabla2.md  blabla3.md  index.md
_sources/mitroa/: examples.md  modelling.md
_sources/notebooks/: example7-trans.ipynb  index.ipynb
_sources/rc1/: enal_loads.md  grades.md
_sources/rc2/: blabla.md  blabla3.md  blabla4.md  blabla5.md  homework.md  shear.md
_static/visualizations/: beam_uniform_loading.html  linear_interpolation.html  tbeam_centroid.html
docs/: _config.yml  _toc.yml  index.md  markdown.md  references.bib  references.md
docs/miniappz/: blabla2.md  blabla3.md  blabla4.md  blabla5.md  index.md
docs/mitroa/: modelling.md
docs/rc1/: enal_loads.md  grades.md  markdown-01.md
marimo/: normal_dist.py
miniappz/: blabla2.html  blabla3.html  blabla4.html  blabla5.html  index.html
mitroa/: examples.html  modelling.html
notebooks/: Untitled.ipynb  example7-trans.html  example7-trans.ipynb  index.html
rc1/: enal_loads.html  grades.html  markdown-01.html
rc2/: blabla.html  blabla2.html  blabla3.html  blabla4.html  blabla5.html  homework.html  shear.html
rc3/: columns_shear_reinforcement.html
repairs/: moment_rotation_beams.html  moment_rotation_columns.html
streamlit/: app.py
(+277 files in other folders)
